<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainFragment">

        <TextView
            style="@style/normalText"
            android:id="@+id/tv_main_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="118dp"
            android:text="@string/tv_main_hi"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/boldText"
            android:id="@+id/tv_main_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_main_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toTopOf="@id/tv_main_hi"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_hi"
            app:layout_constraintStart_toEndOf="@+id/tv_main_hi" />

        <TextView
            style="@style/normalText"
            android:id="@+id/tv_main_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tv_main_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_name"
            android:textSize="24sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_main"
            android:layout_width="match_parent"
            android:layout_height="297dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            app:strokeColor="#dbdbdb"
            app:strokeWidth="0.5dp"
            app:cardBackgroundColor="#40F0F0F0"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_question">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/tv_main_suggestion"
                    style="@style/mediumText"
                    android:text="@string/tv_main_suggestion"
                    android:textColor="#3E3E3E"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line_main_01"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/line_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_suggestion" />

                <EditText
                    android:id="@+id/et_main_question"
                    style="@style/normalText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/et_main_question_hint"
                    android:textColorHint="#EBEBEB"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_main_01"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="15dp" />

                <TextView
                    android:id="@+id/tv_main_count"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_main_count"
                    android:textColor="#454545"
                    android:textSize="14sp"
                    android:layout_marginEnd="18dp"
                    app:layout_constraintBottom_toBottomOf="@id/et_main_question"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/line_main_02"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="11dp"
                    android:background="@color/line_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_main_question" />

                <View
                    android:id="@+id/view_main_photo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="16dp"
                    android:background="#f4f4f4"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line_main_02" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_gallery"
                    app:layout_constraintBottom_toBottomOf="@+id/view_main_photo"
                    app:layout_constraintEnd_toEndOf="@+id/view_main_photo"
                    app:layout_constraintStart_toStartOf="@+id/view_main_photo"
                    app:layout_constraintTop_toTopOf="@id/view_main_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/normalText"
            android:id="@+id/btn_main_send_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_send_question"
            android:textColor="@color/white"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="2dp"
            android:background="@drawable/bg_filled_round_button"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_main"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>